Fix alignment in the allele summary table

--- a/src/app/genotype-allele-summary/genotype-allele-summary.component.css
+++ b/src/app/genotype-allele-summary/genotype-allele-summary.component.css
@@ -9,4 +9,5 @@ table.diploid tbody:nth-child(odd){
 table.genotype-allele-summary th, table.genotype-allele-summary td {
   border: 1px solid #ededed;
   padding: 0.2em 2em 0.2em 0.2em;
+  vertical-align: top;
 }
